Fixed center alignment

--- a/styles.css
+++ b/styles.css
@@ -19,5 +19,5 @@
 .body-content {
   width: 40%;
   height: 100px;
-  text-align: center;
+  align-items: center;
 }
